--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,4 +1,4 @@
-<head>
+<!-- <head>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 </head>
 
@@ -14,7 +14,7 @@
 	// 	document.getElementById("demo").innerHTML = document.getElementById(id).innerHTML;
 	// }
 </script>
-
+ -->
 <!-- <h1 id="demo" style="margin-top:90px">DEMO</h1> -->
 <nav class="navbar navbar-default navbar-fixed-top user-header">
   <div class="container-fluid">
