--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -27,13 +27,11 @@ td {
 	border: 0px;
 }
 
+.user-destroy-form {
+	margin-top: 8px; margin-left: 15px;
+}
+
 .user-upload-form {
-	/*margin-top: 60px; margin-bottom: 10px; margin-left: 15px;
-	padding: 5px;
-	border: 1px solid #8a8a8a;
-	width: 230px;
-	box-shadow: 2px 2px 2px #555555;
-	border-radius: 6px;*/
 	margin-top: 6px;
 }
 
